--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fabric-ca-client": "^2.1.0",
     "fabric-client": "^1.4.8",
     "fabric-common": "^1.4.10",
-    "fabric-network": "^2.1.0"
+    "fabric-network": "^1.4.1",
+    "uuid": "^3.4.0"
   }
 }
