--- a/package.json
+++ b/package.json
@@ -1,27 +1,58 @@
 {
-  "name": "arion-backend",
-  "version": "1.0.0",
-  "description": "backend for the arion App",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/juniorug/arion-backend.git"
-  },
-  "author": "Junior Mascarenhas",
-  "homepage": "https://github.com/juniorug/arion-backend#readme",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/juniorug/arion-backend/issues"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "fabric-ca-client": "^2.1.0",
-    "fabric-client": "^1.4.8",
-    "fabric-common": "^1.4.10",
-    "fabric-network": "^1.4.1",
-    "uuid": "^3.4.0"
-  }
+    "name": "arion-backend",
+    "version": "1.0.0",
+    "description": "backend for the arion App",
+    "main": "index.js",
+    "engines": {
+        "node": ">=8",
+        "npm": ">=5"
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "pretest": "npm run lint",
+        "test": "nyc mocha --recursive"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/juniorug/arion-backend.git"
+    },
+    "engineStrict": true,
+    "author": "Junior Mascarenhas",
+    "license": "ISC",
+    "homepage": "https://github.com/juniorug/arion-backend#readme",
+    "bugs": {
+        "url": "https://github.com/juniorug/arion-backend/issues"
+    },
+    "dependencies": {
+        "express": "^4.17.1",
+        "fabric-ca-client": "^2.2.4",
+        "fabric-network": "^2.2.4",
+        "fabric-client": "^1.4.18",
+        "fabric-common": "^2.2.9",
+        "uuid": "^3.4.0"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "eslint": "^5.9.0",
+        "mocha": "^5.2.0",
+        "nyc": "^14.1.1",
+        "sinon": "^7.1.1",
+        "sinon-chai": "^3.3.0"
+    },
+    "nyc": {
+        "exclude": [
+            "coverage/**",
+            "test/**"
+        ],
+        "reporter": [
+            "text-summary",
+            "html"
+        ],
+        "all": true,
+        "check-coverage": true,
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+    }
 }
