--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
         "url": "https://github.com/juniorug/arion-backend/issues"
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
         "fabric-ca-client": "^2.2.4",
         "fabric-network": "^2.2.4",
-        "express": "^4.17.1",
         "uuid": "^3.4.0"
     },
     "devDependencies": {
